CCDP-154 -> Improvement: SearchBox input (text and placeholder) contrast fix.

--- a/src/theme/Navbar/ExtendedNavbar/Search/SearchBox/styles.module.scss
+++ b/src/theme/Navbar/ExtendedNavbar/Search/SearchBox/styles.module.scss
@@ -23,7 +23,7 @@
     .container_input {
         width: 100%;
         background-color: var(--liftedBlack);
-        color: #6d6d6d;
+        color: var(--casperWhite);
 
         background-size: 22px;
         background-position: 9px 9px;
@@ -33,6 +33,11 @@
         border: 1px solid var(--casperWhite);
         border-radius: 2px;
         white-space: nowrap;
+
+        &::placeholder {
+            opacity: 0.7;
+            color: var(--casperWhite);
+        }
 
         &:focus {
             color: var(--casperYellow);
